Archive2/5a/c930692a3f2baf/output
clang version 3.4.2 (tags/RELEASE_342/final 216574)
Target: x86_64-unknown-linux-gnu
Thread model: posix
main.cpp:15:8: error: expected ';' after expression
    r++
       ^
       ;
main.cpp:21:5: error: use of undeclared identifier 'getch'
    getch();
    ^
2 errors generated.
